# xent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  presentation_guidance.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
configs/: benchmark0.1.json  benchmark0.2.json
games/: Alethiometer.xega  Alethiometer.xent  Alethiometer_presentation.py  Both Directions_presentation.py  Bridge_presentation.py  Condense.xega  Condense_presentation.py  Contrast.xega  Contrast_presentation.py  Diverging Sequence.xega  Diverging Sequence_presentation.py  Horizon.xent  Horizon_presentation.py  Over the Horizon_presentation.py  Synthesize.xega  Synthesize_presentation.py  Two-Ways_presentation.py  alethiometer_presentation.py  dex.xega  dex_presentation.py  double_edge.xega  likely_sequence_unlikely_result.xega  likely_sequence_unlikely_result_presentation.py  multi.xega  single.xega  single_presentation.py
games/new_games/: Contrast-set-of-words.xega  Moebius-ring.xega  S-plus-seven.xega
scripts/: build-for-pypi.sh  check_benchmark_completeness.py  cleanup_common_archive_tweets.py  generate_md_table.py  process_benchmark_results.py  remove_game_from_benchmark.py
src/xega/analysis/: analyze.py  plot.py  report.py
src/xega/benchmark/: expand_benchmark.py  run_benchmark.py
src/xega/cli/: analyze.py  configure.py  main.py  run.py  serve.py
src/xega/common/: benchmark_event.py  configuration_types.py  constants.py  errors.py  token_xent_list.py  util.py  x_flag.py  x_string.py  xega_event.py  xega_types.py
src/xega/presentation/: executor.py  sdk.py
src/xega/runtime/: base_player.py  default_players.py  execution.py  human_player.py  judge.py  llm_api_client.py  player_configuration.py  players.py  runtime.py  text_generation.py  variables.py  websocket_player.py
src/xega/storage/: directory_storage.py  storage_interface.py
src/xega/web/: __init__.py  api.py  server.py  websocket.py  websocket_game_runner.py
src/xega/web/static/: index.html
src/xega/web/static/assets/: index-BJJZX5ZX.js  index-CT6UcbjR.js  index-Cv_DI7gD.css
src/xent/analysis/: analyze.py  plot.py  report.py
src/xent/benchmark/: expand_benchmark.py  run_benchmark.py  run_haltable.py
src/xent/cli/: analyze.py  cli_util.py  configure.py  main.py  run.py  serve.py
src/xent/common/: benchmark_event.py  configuration_types.py  constants.py  errors.py  game_discovery.py  paths.py  token_xent_list.py  util.py  version.py  x_flag.py  x_list.py  x_string.py  xega_event.py  xent_event.py
src/xent/external_engine/: external_engine.py
src/xent/games/: Alethiometer.xent  Alethiometer_presentation.py  Condense.xent  Condense_presentation.py  Contrast.xent  Contrast_presentation.py  Horizon.xent  Horizon_presentation.py  Synthesize.xent  Synthesize_presentation.py  Two-Ways.xent  Two-Ways_presentation.py  __init__.py
src/xent/players/: controlled_player.py  default_players.py  human_player.py  players.py  websocket_player.py
src/xent/presentation/: __init__.py  executor.py  sdk.py
src/xent/runtime/: base_player.py  default_players.py  execution.py  halting_player.py  human_player.py  judge.py  llm_api_client.py  player_configuration.py  players.py  runtime.py  variables.py  websocket_player.py
src/xent/runtime/players/: base_player.py  default_players.py  halting_player.py  human_player.py  llm_api_client.py  players.py  websocket_player.py
src/xent/runtime/text_generation/: community_archive_generation.py  corpus_generation.py  cosmopedia_generation.py  judge_generation.py  length_constrained_text_sampler.py  omni_math_generation.py  text_generation.py
src/xent/storage/: directory_storage.py  storage_interface.py
src/xent/web/: __init__.py  keys_store.py  server.py  websocket_game_runner.py
tests/: conftest.py  test_assign_instruction.py  test_beacon_replay_instructions.py  test_cli.py  test_cli_presentation_integration.py  test_configure.py  test_dsl.py  test_dsl_functions.py  test_elicit_reveal_instructions.py  test_ensure_instruction.py  test_error_cases.py  test_expand_config.py  test_haltable_integration.py  test_integration.py  test_judge.py  test_presentation.py  test_presentation_integration.py  test_reward_instruction.py  test_runtime.py  test_serde.py  test_serde_runtime.py  test_text_generation.py  test_token_usage.py  test_token_xent_list.py  test_x_string.py
web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: ApiKeysModal.tsx  BenchmarkList.tsx  BenchmarkMonitor.tsx  LeaderboardTable.tsx  Modal.tsx  PlayerConfigForm.tsx  ProgressBar.tsx  ResultsTable.tsx  index.ts
web/src/components/charts/: ProgressLineChart.tsx  ScoreBarChart.tsx  index.ts
web/src/components/play/: ElicitRequestHandler.tsx  GameError.tsx  GamePanel.tsx  PlayPage.tsx  TokenVisualization.tsx
web/src/hooks/: useWebSocket.ts
web/src/types/: benchmark.ts
web/src/utils/: api.ts  chartData.ts  modelSpec.ts
web/src/views/: BenchmarkDashboard.tsx  OverallView.tsx  index.ts
